fix url name
